# ThinkStats2

./: pyproject.toml
code/: chap01ex.ipynb  nsfg.py  pandas_examples.ipynb
