[tool.poetry]
name = "thinkstats2"
version = "0.1.0"
description = ""
authors = ["Sam Lauffenburger <sam.lauff@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^0.22"
scipy = "^1.3.3"
pandas = "^0.25.3"
seaborn = "^0.9.0"
matplotlib = "^3.1.2"
numpy = "^1.17.4"
jupyter = "^1.0.0"
tables = "^3.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
